--- a/index.html
+++ b/index.html
@@ -245,6 +245,8 @@ function generarCV() {
                 <section id="contacto">
                     <h3>${datosCV.contacto.titulo}</h3>
                     <p>${datosCV.contacto.descripcion}</p>
+                    <p><a href="${datosCV.contacto.Linkedin}"target="_blank">Linkedin</a></p>
+                    <p><a href="${datosCV.contacto.github}"target="_blank">GitHub</a></p>
                 </section>
                 
                 <!-- Footer -->
